@@ -248,3 +248,4 @@ files[] = tests/views_query.test
 files[] = tests/views_groupby.test
 files[] = tests/views_pager.test
 files[] = tests/views_glossary.test
+files[] = tests/views_exposed_form.test
